--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
         android:orientation="vertical">
 
         <fragment
-            android:id="@+id/CountriesFragment"
+            android:id="@+id/navHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.example.byron.xoomchallenge.CountriesFragment"/>
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation_graph"/>
 
     </LinearLayout>
 
