--- a/app/src/main/res/layout/country_item.xml
+++ b/app/src/main/res/layout/country_item.xml
@@ -17,11 +17,13 @@
             <TextView
                 android:id="@+id/country_name"
                 style="@style/CountryTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/country_prefix"
+                app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintStart_toEndOf="@+id/country_imageView"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Guatemala" />
@@ -48,6 +50,18 @@
                 app:layout_constraintStart_toStartOf="@+id/country_name"
                 app:layout_constraintTop_toBottomOf="@+id/country_name"
                 tools:text="+502" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_star_border" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
