--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/countriesFragment"
-        android:name="com.ajin.byron.xoomchallenge.ui.fragments.CountriesFragment"
+        android:name="com.ajin.byron.xoomchallenge.ui.fragments.CountryFragment"
         android:label="fragment_countries"
         tools:layout="@layout/fragment_countries" />
 </navigation>
